O3-2967: Fix test result date layout on tablet screens

--- a/packages/esm-patient-tests-app/src/test-results/individual-results-table-tablet/individual-results-table-tablet.scss
+++ b/packages/esm-patient-tests-app/src/test-results/individual-results-table-tablet/individual-results-table-tablet.scss
@@ -64,3 +64,12 @@
 .overlay {
   padding: layout.$spacing-05;
 }
+.gridContainer {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.dateHeaderInner {
+  overflow-x: auto;
+  white-space: nowrap;
+}
